recursion.logo.lessons.recursion.logo.polygonfractal.PolygonFractal.scala.error
PolygonFractal:20: error: expected start of definition
	override def run() {
                 ^PolygonFractal:24: error: Unmatched closing brace '}' ignored here
}
^